--- a/path/to/install/module/Application/view/application/index/index.phtml
+++ b/path/to/install/module/Application/view/application/index/index.phtml
@@ -29,22 +29,14 @@
       </tr>
     </thead>
     <tbody>
-    <?php 
-   $response =  $_SESSION['response'];
-//    echo $response ; exit();
-//    $character = json_decode($response);
-   while ($character = json_decode($response)) {
-   
-   ?>    
+
       <tr>
-        <td><?php echo $character->icon?></td>
-        <td><?php echo $character->name?></td>
-        <td><?php echo $character->vicinity?></td>
+        <td><?php ?></td>
+        <td><?php  ?></td>
+        <td><?php ?></td>
       </tr>
 
-   <?php 
-   }
-   ?>   
+
       
     </tbody>
   </table>
