--- a/path/to/install/module/Application/view/application/index/index.phtml
+++ b/path/to/install/module/Application/view/application/index/index.phtml
@@ -43,13 +43,7 @@
 </div>
 
 <script>
-      // This example adds a search box to a map, using the Google Place Autocomplete
-      // feature. People can enter geographical searches. The search box will return a
-      // pick list containing a mix of places and predicted search terms.
 
-      // This example requires the Places library. Include the libraries=places
-      // parameter when you first load the API. For example:
-      // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
 
       function initAutocomplete() {
         var map = new google.maps.Map(document.getElementById('map'), {
@@ -121,5 +115,29 @@
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtbkvX3zjP15y_1dQWzoxvAlMLsgJSEuw&libraries=places&callback=initAutocomplete"
          async defer></script>
+
+<script language="JavaScript">
+
+    function CALLAPI(lat,long,keyword){
+
+        var url="https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=13.803011,100.538813&radius=1500&type=restaurant&keyword=Bangsue&key=AIzaSyDtbkvX3zjP15y_1dQWzoxvAlMLsgJSEuw";
+        var headers = array(
+            'Content-type: application/json; charset=UTF-8'
+        );
+        var ch = curl_init();
+        curl_setopt(ch, CURLOPT_URL,url);
+        curl_setopt(ch, CURLOPT_HTTPHEADER, headers);
+        curl_setopt(ch, CURLOPT_RETURNTRANSFER, 1);
+        curl_setopt(ch, CURLOPT_HTTPGET , 1);
+        curl_setopt(ch, CURLOPT_SSL_VERIFYPEER, false);
+        var response = curl_exec(ch);
+        var character = json_decode(response);
+
+    }
+
+
+
+</script>
+
     
 
