--- a/path/to/install/module/Application/view/application/index/index.phtml
+++ b/path/to/install/module/Application/view/application/index/index.phtml
@@ -23,19 +23,39 @@
   <table class="table table-dark table-hover">
     <thead>
       <tr>
-        <th>Icon</th>
         <th>Restaurantsname</th>
         <th>Location</th>
       </tr>
     </thead>
     <tbody>
+    <?php
 
+
+
+    $lat = 13.803011;
+    $long = 100.538813;
+    $keyword = "Bangsue";
+
+    $url="https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=".$lat.",".$long."&radius=1500&type=restaurant&keyword=".$keyword."&key=AIzaSyDtbkvX3zjP15y_1dQWzoxvAlMLsgJSEuw";
+    $headers = array(
+        'Content-type: application/json; charset=UTF-8'
+    );
+    $ch = curl_init();
+    curl_setopt($ch, CURLOPT_URL,$url);
+    curl_setopt($ch, CURLOPT_HTTPHEADER, $headers);
+    curl_setopt($ch, CURLOPT_RETURNTRANSFER, 1);
+    curl_setopt($ch, CURLOPT_HTTPGET , 1);
+    curl_setopt($ch, CURLOPT_SSL_VERIFYPEER, false);
+    $response = curl_exec($ch);
+    $character = json_decode($response);
+//    echo  $response;exit();
+    $date = $character->results;
+    foreach ($date as $entry){ ?>
       <tr>
-        <td><?php ?></td>
-        <td><?php  ?></td>
-        <td><?php ?></td>
+        <td><?php print_r($entry->name) ?></td>
+        <td><?php print_r($entry->vicinity) ?></td>
       </tr>
-
+    <?php } ?>
 
       
     </tbody>
