--- a/path/to/install/module/Application/view/application/index/index.phtml
+++ b/path/to/install/module/Application/view/application/index/index.phtml
@@ -11,9 +11,8 @@
     <p>
     show the list of Restaurants by using Google Map API 
     </p>
-    <input id="pac-input"  type="text" value="Bangsue" placeholder="Search Box">
-    <!-- <p><a class="btn btn-success btn-lg" target="_blank">search </a></p> -->
-    <!-- <div id="map"></div> -->
+    <input id="pac-input"  type="text" value="Bangsue" placeholder="Search Box"   >
+
     <div id="map" style="width:100%;height:400px;"></div>
 
 </div>
@@ -49,8 +48,8 @@
     $response = curl_exec($ch);
     $character = json_decode($response);
 //    echo  $response;exit();
-    $date = $character->results;
-    foreach ($date as $entry){ ?>
+    $data = $character->results;
+    foreach ($data as $entry){ ?>
       <tr>
         <td><?php print_r($entry->name) ?></td>
         <td><?php print_r($entry->vicinity) ?></td>
@@ -130,34 +129,29 @@
           });
           map.fitBounds(bounds);
         });
+
+
+
+          var myPlace = {lat: 13.803011, lng: 100.538813};
+
+          var service = new google.maps.places.PlacesService(map);
+          service.nearbySearch({
+              location : myPlace,
+              radius : 5500,
+              type : [ 'restaurant' ]
+          }, callback);
+
+          function callback(results, status) {
+              if (status === google.maps.places.PlacesServiceStatus.OK) {
+                  return results;
+              }
+          }
       }
 
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtbkvX3zjP15y_1dQWzoxvAlMLsgJSEuw&libraries=places&callback=initAutocomplete"
          async defer></script>
 
-<script language="JavaScript">
-
-    function CALLAPI(lat,long,keyword){
-
-        var url="https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=13.803011,100.538813&radius=1500&type=restaurant&keyword=Bangsue&key=AIzaSyDtbkvX3zjP15y_1dQWzoxvAlMLsgJSEuw";
-        var headers = array(
-            'Content-type: application/json; charset=UTF-8'
-        );
-        var ch = curl_init();
-        curl_setopt(ch, CURLOPT_URL,url);
-        curl_setopt(ch, CURLOPT_HTTPHEADER, headers);
-        curl_setopt(ch, CURLOPT_RETURNTRANSFER, 1);
-        curl_setopt(ch, CURLOPT_HTTPGET , 1);
-        curl_setopt(ch, CURLOPT_SSL_VERIFYPEER, false);
-        var response = curl_exec(ch);
-        var character = json_decode(response);
-
-    }
-
-
-
-</script>
 
     
 
