--- a/path/to/install/module/Application/view/layout/layout.phtml
+++ b/path/to/install/module/Application/view/layout/layout.phtml
@@ -37,18 +37,14 @@
 API
                     </a>
                 </div>
-                <!-- <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?= $this->url('home') ?>">Home</a></li>
-                    </ul>
-                </div> -->
             </div>
         </nav>
         <div class="container">
             <?= $this->content ?>
             <hr>
             <footer>
-                <p>&copy; 2019 - <?= date('Y') ?> by Nopparat Yasataro 082-1034148</p>
+                <p>&copy; 2019 - <?= date('Y') ?> by Nopparat Yasataro Email: noppakit15@gmail Tel: 082-1034148</p>
+                <p>I have never used ZF3 and VueJS, but I will learn to use it.</p>
             </footer>
         </div>
         <?= $this->inlineScript() ?>
