--- a/path/to/install/module/Application/view/application/index/index.phtml
+++ b/path/to/install/module/Application/view/application/index/index.phtml
@@ -131,7 +131,7 @@
         });
 
 
-
+// อันนี้ก็เรียก  ข้อมูลร้านอาหารได้เหมือนกัน  แต่เอาออกไปใช้งานไม่เป้น
           var myPlace = {lat: 13.803011, lng: 100.538813};
 
           var service = new google.maps.places.PlacesService(map);
