--- a/path/to/install/module/Application/view/application/index/index.phtml
+++ b/path/to/install/module/Application/view/application/index/index.phtml
@@ -1,4 +1,4 @@
-<head>
+<head xmlns:v-on="http://www.w3.org/1999/xhtml" xmlns:v-on="http://www.w3.org/1999/xhtml">
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -6,8 +6,17 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="app.js" charset="utf-8" > </script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
+
+
 </head>
+<body>
+
+
 <div class="jumbotron">
+
     <p>
     show the list of Restaurants by using Google Map API 
     </p>
@@ -16,8 +25,8 @@
     <div id="map" style="width:100%;height:400px;"></div>
 
 </div>
-<div class="container">
-  <h2>List of Restaurants</h2>
+<div class="container" id = "res">
+  <h2 >List of Restaurants</h2>
       
   <table class="table table-dark table-hover">
     <thead>
@@ -56,10 +65,13 @@
       </tr>
     <?php } ?>
 
+
+
       
     </tbody>
   </table>
 </div>
+</body>
 
 <script>
 
@@ -149,7 +161,7 @@
       }
 
     </script>
-//call google maps api
+<!--call google maps api-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtbkvX3zjP15y_1dQWzoxvAlMLsgJSEuw&libraries=places&callback=initAutocomplete"
          async defer></script>
 
